--- a/projects-appendix/modules/current-projects/pages/fall2023/201_TAs.adoc
+++ b/projects-appendix/modules/current-projects/pages/fall2023/201_TAs.adoc
@@ -13,7 +13,7 @@ You can find the office hours schedule for the student-facing TAs on the xref:fa
 |===
 Name,Zoom Meeting Link
 Ananya Goel,https://purdue-edu.zoom.us/j/2256232958
-Dhruv Shah,https://purdue-edu.zoom.us/u/ac8ONykADc
+Dhruv Shah,https://purdue-edu.zoom.us/j/7247613499
 Jackson Fair,https://purdue-edu.zoom.us/j/2596138255	
 Joseph Lee,https://purdue-edu.zoom.us/u/a8X1rcGKI
 Nikhil Saxena,https://purdue-edu.zoom.us/j/5711628431
